# InfoManager

./: CMakeLists.txt  InfoManager.cbp  InfoManager.layout  README.md  test.c  test.csv  数据结构课程实践报告-学生信息管理.docx
conf/: default_type.txt
docs/: help.txt
include/: analysis.h  dataUtil.h  fileHandler.h  linkList.h  query.h  stack.h  status.h  sys.h  util.h
script/: make.im  nest.im  test.im
src/: analysis.c  dataUtil.c  fileHandler.c  linkList.c  main.c  query.c  stack.c  sys.c  util.c
